--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
   <link rel="icon" type="image/svg+xml" href="./src/assets/tellsmama_crop_icon-removebg-preview.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TellsMama</title>
-
-  <meta property="og:title" content="Tellsmama" />
-  <meta property="og:description" content="บอกแม่มาซื้อด่วน" />
-  <meta property="og:image" content="./src/assets/tellsmama_crop" /> <meta property="og:url" content="https://tellsmama.netlify.app/" /> <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Tellsmama" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- arimo -->
